Summary: Support kerberos JIRA_ID: N/A Description:N/A Test:N/A

--- a/src/main/resources/hdfs-over-ftp.properties
+++ b/src/main/resources/hdfs-over-ftp.properties
@@ -7,9 +7,13 @@ data-ports = 2223-2225
 #ssl-data-ports = 2227-2229
 
 # hdfs uri
-hdfs-uri = hdfs://localhost:9000
+hdfs-uri = hdfs://pyx
 
-# have to be a user which runs HDFS
-# this allows you to start ftp server as a root to use 21 port
-# and use hdfs as a superuser
-superuser = agladyshev
+# is kerberos enabled
+kerberos-enable = true
+
+# path of keytab file
+keytab-path = /etc/security/keytabs/hdfs.headless.keytab
+
+# principal of user
+principal = hdfs-pyx@BCHKDC
