--- a/pom.xml
+++ b/pom.xml
@@ -8,21 +8,49 @@
     <artifactId>hdfs-over-ftp</artifactId>
     <version>1.0</version>
 
+    <licenses>
+        <license>
+            <name>Apache 2.0 License</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+        <license>
+            <name>The CMSS Software License, Version 1.0</name>
+            <url>http://${cmss.http.ip}:${cmss.http.prot}/licenses/LICENSE-CMSS.txt</url>
+        </license>
+    </licenses>
+
+    <properties>
+        <cmss.maven.repo.ip>10.254.2.95</cmss.maven.repo.ip>
+        <cmss.maven.repo.port>8083</cmss.maven.repo.port>
+        <cmss.http.ip>10.254.2.95</cmss.http.ip>
+        <cmss.http.prot>80</cmss.http.prot>
+        <hadoop.version>2.6.0-bc1.3.6</hadoop.version>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <url>http://${cmss.maven.repo.ip}:${cmss.maven.repo.port}/repository/internal/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>0.20.2</version>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-            <version>0.23.1</version>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.mina</groupId>
             <artifactId>mina-core</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.0-M3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.ftpserver</groupId>
@@ -44,25 +72,85 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.4</version>
                 <configuration>
-                    <descriptors>
-                        <descriptor>assembly.xml</descriptor>
-                    </descriptors>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
                     <archive>
                         <manifest>
                             <mainClass>org.apache.hadoop.contrib.ftp.HdfsOverFtpServer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.5</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <attach>false</attach>
+                    <finalName>${project.artifactId}-${project.version}</finalName>
+                    <descriptors>
+                        <descriptor>hdfs-over-ftp-dist.xml</descriptor>
+                    </descriptors>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${project.build.directory}/${project.artifactId}-${project.version}" />
+                                <mkdir dir="${project.build.directory}/${project.artifactId}-${project.version}/run" />
+                                <mkdir dir="${project.build.directory}/${project.artifactId}-${project.version}/logs" />
+                                <symlink link="${project.build.directory}/${project.artifactId}-${project.version}/${project.artifactId}.jar"
+                                         resource="./lib/${project.artifactId}-${project.version}.jar" />
+                            </target>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>tar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target if="tar">
+                                <!-- Using Unix script to preserve symlinks -->
+                                <echo file="${project.build.directory}/dist-maketar.sh">
+                                    cd "${project.build.directory}"
+                                    tar cf - ${project.artifactId}-${project.version} | gzip > ${project.artifactId}-${project.version}.tar.gz
+                                </echo>
+                                <exec executable="sh" dir="${project.build.directory}"
+                                      failonerror="true">
+                                    <arg line="./dist-maketar.sh"/>
+                                </exec>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
