--- a/src/main/resources/users.properties
+++ b/src/main/resources/users.properties
@@ -1,22 +1,10 @@
-ftpserver.user.firstuser.userpassword=310dcbbf4cce62f762a2aaa148d556bd
-ftpserver.user.firstuser.homedirectory=/
-ftpserver.user.firstuser.enableflag=true
-ftpserver.user.firstuser.writepermission=true
-ftpserver.user.firstuser.maxloginnumber=0
-ftpserver.user.firstuser.maxloginperip=0
-ftpserver.user.firstuser.idletime=0
-ftpserver.user.firstuser.uploadrate=0
-ftpserver.user.firstuser.downloadrate=0
-ftpserver.user.firstuser.groups=firstuser,users
-
-ftpserver.user.agladyshev.userpassword=310dcbbf4cce62f762a2aaa148d556bd
-ftpserver.user.agladyshev.homedirectory=/
-ftpserver.user.agladyshev.enableflag=true
-ftpserver.user.agladyshev.writepermission=true
-ftpserver.user.agladyshev.maxloginnumber=0
-ftpserver.user.agladyshev.maxloginperip=0
-ftpserver.user.agladyshev.idletime=0
-ftpserver.user.agladyshev.uploadrate=0
-ftpserver.user.agladyshev.downloadrate=0
-ftpserver.user.agladyshev.groups=agladyshev,users
-
+ftpserver.user.test.userpassword=098F6BCD4621D373CADE4E832627B4F6
+ftpserver.user.test.homedirectory=/
+ftpserver.user.test.enableflag=true
+ftpserver.user.test.writepermission=true
+ftpserver.user.test.maxloginnumber=0
+ftpserver.user.test.maxloginperip=0
+ftpserver.user.test.idletime=0
+ftpserver.user.test.uploadrate=0
+ftpserver.user.test.downloadrate=0
+ftpserver.user.test.groups=hadoop
